<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/custom_logout_dialog_background"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="11dp"
            android:src="@drawable/logout_dialog_image"/>

        <TextView
            android:id="@+id/textViewLogoutDialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="14dp"
            android:text="@string/get_back"
            android:fontFamily="@font/sf_pro_display_medium"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/textViewLogoutDialogContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="6dp"
            android:text="@string/logout_msg"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textSize="16sp"
            android:textColor="@color/martinique"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="51dp"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="23dp">

            <Button
                android:id="@+id/buttonCancelLogout"
                android:layout_width="105dp"
                android:layout_height="34dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:textAlignment="center"
                android:background="@drawable/custom_cancel_logout_button"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/persian_red"
                android:fontFamily="@font/sf_pro_display_bold"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/buttonDialogLogout"
                android:layout_width="105dp"
                android:layout_height="34dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:textAlignment="center"
                android:background="@drawable/custom_button_logout"
                android:text="@string/logout"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:fontFamily="@font/sf_pro_display_medium"
                android:textSize="14sp"/>
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>